ColorBucket: Add Solarized Dark theme
arrow-edits:
 - Adapt to ColorBucket overlay controller.

Change-Id: I7281bd24f8eff831797180987d25f1c6c36a1eea
Co-Authored-By: ganeshi4u <ganeshvarmai4u@gmail.com>
Signed-off-by: Akito Mizukito <akito@evolution-x.org>

--- a/overlay/common/packages/services/Telephony/res/values-mcc310-mnc002/config.xml
+++ b/overlay/common/packages/services/Telephony/res/values-mcc310-mnc002/config.xml
@@ -17,4 +17,12 @@
 <resources>
     <!-- Flag to enable VVM3 visual voicemail. VVM3 is used by Verizon Wireless. -->
     <bool name="vvm3_enabled">true</bool>
+
+    <color name="homepage_card_dismissal_background">@*android:color/notification_material_background_color</color>
+    <color name="contextual_card_background">@*android:color/notification_material_background_color</color>
+    <color name="search_bar_background">@*android:color/notification_material_background_color</color>
+
+    <!-- Dialog background color -->
+    <color name="dialog_background">@*android:color/notification_material_background_color</color>
+
 </resources>
